Implementação frontend e teste da api